Write permissions for databases  … Use latest store modules from npm Update README Update docs Update examples Update benchmarks Update dependencies Add Getting Started guide Add new a screenshot Add persistency tests for snapshot saving/loading and events Add network stress tests (but skip them by default as they're very heavy and lengthy) Add browser benchmarks Add log() alias for eventlog() database Add possibility to create database if it doesn't exist yet Add support for orbitdb addresses Add a test for starting replication when peers connect Add debug build Use IPFS nodeID as default user id Use ipfs-pubsub-room Handle closing of databases properly Handle cache errors Clean up tests, re-organize code files Clean up code style Support for CLI

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
 *sublime*
 node_modules/
-*.log
-.vagrant/
-.idea/
-dump.rdb
-Vagrantfile
-examples/browser/bundle.js
-examples/browser/*.map
+examples/browser/browser-webpack-example/bundle.js
+examples/browser/browser-webpack-example/*.map
 examples/browser/lib
 dist/*.map
-orbit-db/
-ipfs/
+dist/orbitdb.js
+orbitdb/
