--- a/package.json
+++ b/package.json
@@ -1,51 +1,56 @@
 {
   "name": "orbit-db",
-  "version": "0.17.3",
+  "version": "1.0.0",
   "description": "Distributed p2p database on IPFS",
   "author": "Haad",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/haadcode/orbit-db"
+    "url": "https://github.com/orbitdb/orbit-db"
   },
   "engines": {
-    "node": "^6.x.x"
+    "node": ">=8.0.0"
   },
   "browser": {
     "fs-pull-blob-store": "idb-pull-blob-store"
   },
   "main": "src/OrbitDB.js",
   "dependencies": {
-    "libp2p-floodsub": "github:libp2p/js-libp2p-floodsub#orbit-floodsub",
-    "logplease": "^1.2.12",
-    "orbit-db-counterstore": "~0.2.0",
-    "orbit-db-docstore": "~0.2.0",
-    "orbit-db-eventstore": "~0.2.0",
-    "orbit-db-feedstore": "~0.2.0",
-    "orbit-db-kvstore": "~0.2.0",
-    "orbit-db-pubsub": "~0.2.1"
+    "logplease": "^1.2.14",
+    "multihashes": "^0.4.12",
+    "orbit-db-cache": "~0.0.7",
+    "orbit-db-counterstore": "~1.0.0",
+    "orbit-db-docstore": "~1.0.1",
+    "orbit-db-eventstore": "~1.0.0",
+    "orbit-db-feedstore": "~1.0.0",
+    "orbit-db-keystore": "~0.0.2",
+    "orbit-db-kvstore": "~1.0.0",
+    "orbit-db-pubsub": "~0.3.1"
   },
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "^6.24.0",
-    "ipfs-daemon": "~0.3.1",
-    "json-loader": "^0.5.4",
-    "mocha": "^3.2.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "datastore-level": "~0.7.0",
+    "ipfs": "~0.26.0",
+    "ipfs-repo": "~0.18.0",
+    "mocha": "^4.0.1",
     "p-each-series": "^1.0.0",
-    "rimraf": "^2.6.1",
-    "uglify-js": "github:mishoo/UglifyJS2#harmony",
-    "webpack": "^2.3.1"
+    "p-map-series": "^1.0.0",
+    "rimraf": "^2.6.2",
+    "uglifyjs-webpack-plugin": "~1.1.0",
+    "webpack": "^3.8.1"
   },
   "scripts": {
     "examples": "npm run examples:node",
     "examples:node": "node examples/eventlog.js",
-    "examples:browser": "open examples/browser/index.html && LOG=debug node examples/start-daemon.js",
+    "examples:browser": "open examples/browser/browser.html",
     "test": "mocha",
-    "build": "npm run build:examples && npm run build:dist",
+    "build": "npm run build:dist && npm run build:examples",
     "build:examples": "webpack --config conf/webpack.example.config.js --sort-modules-by size",
-    "build:dist": "webpack -p --config conf/webpack.config.js --sort-modules-by size"
+    "build:dist": "webpack --config conf/webpack.config.js --sort-modules-by size && cp dist/orbitdb.min.js examples/browser/lib/orbitdb.min.js",
+    "build:debug": "webpack --config conf/webpack.debug.config.js --sort-modules-by size && cp dist/orbitdb.js examples/browser/lib/orbitdb.min.js"
   }
 }
