Add debug build

--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
   "scripts": {
     "examples": "npm run examples:node",
     "examples:node": "node examples/eventlog.js",
-    "examples:browser": "open examples/browser/index.html && LOG=debug node examples/start-daemon.js",
+    "examples:browser": "open examples/browser/browser.html",
     "test": "mocha",
     "build": "npm run build:dist && npm run build:examples",
     "build:examples": "webpack --config conf/webpack.example.config.js --sort-modules-by size",
-    "build:dist": "webpack --config conf/webpack.config.js --sort-modules-by size && cp dist/orbitdb.min.js examples/browser/lib/orbitdb.min.js"
+    "build:debug": "webpack --config conf/webpack.config.js --sort-modules-by size && cp dist/orbitdb.min.js examples/browser/lib/orbitdb.min.js",
+    "build:dist": "webpack --config conf/webpack.debug.config.js --sort-modules-by size && cp dist/orbitdb.js examples/browser/lib/orbitdb.min.js"
   }
 }
