--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *sublime*
 node_modules/
-examples/browser/bundle.js
-examples/browser/*.map
+examples/browser/browser-webpack-example/bundle.js
+examples/browser/browser-webpack-example/*.map
 examples/browser/lib
 dist/*.map
 dist/orbitdb.js
