--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "main": "src/OrbitDB.js",
   "dependencies": {
     "logplease": "^1.2.14",
-    "multihashes": "^0.4.9",
+    "multihashes": "^0.4.12",
     "orbit-db-cache": "~0.0.7",
     "orbit-db-counterstore": "github:orbitdb/orbit-db-counterstore#feat/cli",
     "orbit-db-docstore": "github:orbitdb/orbit-db-docstore#feat/cli",
@@ -34,17 +34,15 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "chance": "^1.0.11",
-    "datastore-level": "^0.6.0",
+    "datastore-level": "~0.6.0",
     "ipfs": "~0.26.0",
-    "ipfs-repo": "^0.17.0",
-    "json-loader": "^0.5.7",
+    "ipfs-repo": "~0.18.0",
     "mocha": "^4.0.1",
     "p-each-series": "^1.0.0",
     "p-map-series": "^1.0.0",
     "rimraf": "^2.6.2",
-    "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
-    "webpack": "^3.6.0"
+    "uglifyjs-webpack-plugin": "~1.0.1",
+    "webpack": "^3.8.1"
   },
   "scripts": {
     "examples": "npm run examples:node",
